@@ -116,6 +116,7 @@ typedef struct SET_ERR_TABLE {
 	char diff[64];
 } SET_ERR_TABLE;
 
+
 // Gloabl variables		****************************************************************************************
 int chNum = 0;			///< Total number of channels held in the local lookup table.
 int chMon = 0;			///< Total number of channels being monitored.
@@ -153,46 +154,61 @@ void newfilterstats(int);
 int writeEpicsDb(int,CDS_CD_TABLE *,int);
 int readConfig( char *,char *,int);
 void dbDumpRecords(DBBASE *);
-int cleanLine(char *,int *,int *);
-
+int parseLine(char *,char *,char *,char *,char *,char *,char *);
 
 // End Header **********************************************************************************************************
 //
-/// Routine created to handle quotes within a BURT file line
-///	@param[in] s	Line to parse
-///	@param[out] *qs	Index of first word in a multi-word string EPICS value.
-///	@param[out] *qe	Index of last word in a multi-word string EPICS value.
-///	@return	Number of words in the line.
-int cleanLine(char *s, int *qs, int *qe) {
-int cntr = 0;
-int lastwasspace = 1;
-*qs = 0;
-*qe = 0;
 
-while (*s != 0) {
-	// Replace quotes/tabs with spaces
-	if (*s == '\"' || *s == '\t')
-		*s = ' ';
-	// Look for space indicating end of word.
-	if (*s != ' ') {
-		if(lastwasspace)
-		{
-			cntr ++;
-			if(cntr > 2 && (isalpha(*s) || (ispunct(*s) && *s != '-'))) 
-			{
-				if(*qs == 0) *qs = cntr;
-				else *qe = cntr;
-			}
-			lastwasspace = 0;
+int parseLine(char *s, char *str1, char *str2, char *str3, char *str4, char *str5,char *str6)
+{
+int wc = -1;
+int inQuotes = 0;
+int lastwasspace = 1;
+int ii;
+int mychar = 0;
+char psd[6][64];
+#define IS_A_ALPHA_NUM 	0
+#define IS_A_SPACE 	1
+#define IS_A_QUOTE	2
+
+	while (*s != 0) {
+		mychar = IS_A_ALPHA_NUM;
+		if (*s == '\t') *s = ' ';
+		if (*s == ' ') mychar = IS_A_SPACE;
+		if (*s == '\"') mychar = IS_A_QUOTE;
+		switch(mychar) {
+			case IS_A_ALPHA_NUM:
+				if(lastwasspace) {
+					wc ++;
+					psd[wc][0] = '\0';
+					}
+				strncat(psd[wc],s,1);
+				lastwasspace = 0;
+				break;
+			case IS_A_SPACE:
+				if(inQuotes) {
+					strncat(psd[wc],s,1);
+				} else {
+					lastwasspace = 1;
+				}
+				break;
+			case IS_A_QUOTE:
+				inQuotes ^= 1;
+				break;
 		}
-	} else {
-		lastwasspace = 1;
-		}
-	s++;
+		s ++;
+	}
+	wc ++;
+	sprintf(str1,"%s",psd[0]);
+	sprintf(str2,"%s",psd[1]);
+	sprintf(str3,"%s",psd[2]);
+	sprintf(str4,"%s",psd[3]);
+	sprintf(str5,"%s",psd[4]);
+	sprintf(str6,"%s",psd[5]);
+	// printf("WC = %d\n%s \t%s\t%s\t%s\t%s\n",wc,psd[0],psd[1],psd[2],psd[3],psd[4]);
+	return(wc);
 }
-// Return number of words in line.
-return(cntr);
-}
+
 
 /// Common routine to check file CRC.
 ///	@param[in] *fName	Name of file to check.
@@ -994,6 +1010,7 @@ int readConfig( char *pref,		///< EPICS channel prefix from EPICS environment.
 	int ii;
 	int lock;
 	char s1[128],s2[128],s3[128],s4[128],s5[128],s6[128],s7[128],s8[128];
+	char ls[6][64];
 	dbAddr paddr;
 	long status;
 	int lderror = 0;
@@ -1009,8 +1026,6 @@ int readConfig( char *pref,		///< EPICS channel prefix from EPICS environment.
 	int fmatch = 0;
 	int fmIndex = 0;
 	char errMsg[128];
-	int qs = 0;
-	int qe = 0;
 	int argcount = 0;
 	int isalarm = 0;
 	int qcnt = 0;
@@ -1033,23 +1048,20 @@ int readConfig( char *pref,		///< EPICS channel prefix from EPICS environment.
 		}
 		chNumP = 0;
 		alarmCnt = 0;
+		// Put dummy in s4 as this column may or may not exist.
 		strcpy(s4,"x");
 		bzero(s3,strlen(s3));
 		strncpy(ifo,pref,3);
 		while(fgets(line,sizeof line,cdf) != NULL)
 		{
 			isalarm = 0;
-			qs = 0;
-			qe = 0;
-			argcount = cleanLine(line,&qs,&qe);
-			// printf("%s has %d words\n",line,argcount);
-			// if(qs != 0) printf("Line has quotes from %d to %d\n",qs,qe);
+			strcpy(s4,"x");
+			argcount = parseLine(line,s1,s2,s3,s4,s5,s6);
 			// Only 3 = no monit flag
 			// >=4 count be monit flag or string with quotes
-			// Put dummy in s4 as this column may or may not exist.
-			strcpy(s4,"x");
-			bzero(s3,strlen(s3));
-			sscanf(line,"%s%s%s%s%s%s",s1,s2,s3,s4,s5,s6);
+			// strcpy(s4,"x");
+			// bzero(s3,strlen(s3));
+			// sscanf(line,"%s%s%s%s%s%s",s1,s2,s3,s4,s5,s6);
 			// If 1st three chars match IFO ie checking this this line is not BURT header or channel marked RO
 			if(strncmp(s1,ifo,3) == 0 && 
 			// Don't allow load of SWSTAT or SWMASK, which are set by this program.
@@ -1058,40 +1070,10 @@ int readConfig( char *pref,		///< EPICS channel prefix from EPICS environment.
 				strstr(s1,"_SWREQ") == NULL &&
 				argcount > 2)
 			{
-				// If quotes in line, need to shift words into 3rd word.
-				qcnt = 0;
-				if(qs!=0) {
-					qcnt = qe - qs;
-					if(qcnt == 1) {
-					sprintf(s3,"%s %s",s3,s4);
-						sprintf(s4,"%s",s5);
-						}
-					if(qcnt == 2) {
-						sprintf(s3,"%s %s %s",s3,s4,s5);
-						sprintf(s4,"%s",s6);
-						}
-					if(qcnt == 3) {
-						sprintf(s3,"%s %s %s %s",s3,s4,s5,s6);
-						sprintf(s4,"%s",s7);
-						}
-					if(qcnt == 4) {
-						sprintf(s3,"%s %s %s %s %s",s3,s4,s5,s6,s7);
-						sprintf(s4,"%s",s8);
-						}
-				}
 				// Clear out the local tabel channel name string.
 				bzero(cdTableP[chNumP].chname,strlen(cdTableP[chNumP].chname));
 				// Load channel name into local table.
 				strcpy(cdTableP[chNumP].chname,s1);
-				// Determine if setting (s3) is string or numeric type data.
-				if(isalpha(s3[0]) || (ispunct(s3[0]) && s3[0] != '-')) {
-					cdTableP[chNumP].datatype = 1;
-					strcpy(cdTableP[chNumP].data.strval,s3);
-				} else {
-					// if(s3[0] == '\0') printf("NULL string for6 %s\n",cdTableP[chNumP].chname);
-					cdTableP[chNumP].data.chval = atof(s3);
-					cdTableP[chNumP].datatype = 0;
-				}
 				// Check if s4 (monitor or not) is set (0/1). If doesn/'t exist in file, set to zero in local table.
 				if(isdigit(s4[0])) {
 					// printf("%s %s %s %s\n",s1,s2,s3,s4);
@@ -1122,10 +1104,16 @@ int readConfig( char *pref,		///< EPICS channel prefix from EPICS environment.
 					if(strcmp(cdTable[ii].chname,cdTableP[chNumP].chname) == 0)
 					{
 						fmatch = 1;
-						if(cdTableP[chNumP].datatype == 1)
+						if(cdTable[ii].datatype == 1)
+						// if(cdTableP[chNumP].datatype == 1)
 						{
+							// printf("quota = %d\n",qcnt);
+							cdTableP[chNumP].datatype = 1;
+							strcpy(cdTableP[chNumP].data.strval,s3);
 							strcpy(cdTable[ii].data.strval,cdTableP[chNumP].data.strval);
 						} else {
+							cdTableP[chNumP].datatype = 0;
+							cdTableP[chNumP].data.chval = atof(s3);
 							cdTable[ii].data.chval = cdTableP[chNumP].data.chval;
 						}
 						if(cdTableP[chNumP].mask != -1)
